--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,18 @@ repositories {
 }
 
 dependencies {
+    // spring
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // lombok
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // db
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
